--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: imwoorinの小博客
+title: imfokhoの小博客
 subtitle: ''
 description: ''
 keywords:
-author: imwoorin
+author: imfokho
 language: zh
 timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://imwoorin.github.io/
+url: https://imfokho.github.io/
 root: /
 # permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -106,7 +106,7 @@ theme: archer
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/imwoorin/imwoorin.github.io.git
+  repo: https://github.com/imfokho/imfokho.github.io.git
   branch: master
   commit: '[Built] 环境大致搭建完成'
 
