--- a/themes/archer/_config.yml
+++ b/themes/archer/_config.yml
@@ -52,7 +52,7 @@ SEO_keywords:
 # main title shown in header image
 main_title: imfokhoの栖息地
 # subtitle
-subtitle: 记录以前，记录现在，讨论将来。
+subtitle: 趁心脏还能跳动把想完成的事完成。
 # site haeder image
 site_header_image: '/intro/index-bg.jpg'
 # post haeder image
