--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: imfokhoの小博客
+title: IMFOKHO的小博客
 subtitle: ''
 description: ''
 keywords:
-author: imfokho
+author: IMFOKHO
 language: zh
 timezone: ''
 
