--- a/themes/archer/_config.yml
+++ b/themes/archer/_config.yml
@@ -2,7 +2,7 @@
 # avatar
 avatar: /avatar/timg.jpg
 # author name
-author: imfokho
+author: IMFOKHO
 # signature
 signature: 一只小萌新。
 # SNS (you can custom the order)
@@ -50,9 +50,9 @@ SEO_keywords:
   - "imfokho blog"
 
 # main title shown in header image
-main_title: imfokhoの栖息地
+main_title: IMFOKHO的栖息地
 # subtitle
-subtitle: 趁心脏还能跳动把想完成的事完成。
+subtitle: 输给谁都可以，但是，决不能输给自己。
 # site haeder image
 site_header_image: '/intro/index-bg.jpg'
 # post haeder image
