--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: ENSUPERB's Blog
+title: ENSUPERB'S BLOG
 subtitle: ''
 description: ''
 keywords:
