--- a/themes/archer/_config.yml
+++ b/themes/archer/_config.yml
@@ -39,7 +39,7 @@ about:
 
 # ========== Site ========== #
 # title of the site (good for SEO)
-SEO_title: ensuperb blog
+SEO_title: ENSUPERB BLOG
 # keywords for site (good for SEO)
 SEO_keywords:
   - hexo
